--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,11 @@ springdoc:
       enabled: true
   cache:
     disabled: true
+
+spring:
+  jpa:
+    show-sql: true # ?? ?? ??
+    properties:
+      hibernate:
+        format_sql: true
+    defer-datasource-initialization: true # ??? ?? ?? data.sql ??
