--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,14 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true # ??? ?? ?? data.sql ??
+    hibernate:
+      ddl-auto: create
+  datasource:
+    url: jdbc:h2:mem:test
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: password
+  h2:
+    console:
+      enabled: true
+
