--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 
 	compileOnly 'org.projectlombok:lombok'
 
@@ -33,10 +35,12 @@ dependencies {
 
 	runtimeOnly 'com.h2database:h2'
 
-	annotationProcessor 'org.projectlombok:lombok'
-
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.projectlombok:lombok:1.18.28'
+
+	annotationProcessor 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
 }
 
 tasks.named('bootBuildImage') {
